all cruds done
