# api/handler/product.go
@@ -1,6 +1,11 @@
 package handler
 
-import "github.com/gin-gonic/gin"
+import (
+	"github.com/gin-gonic/gin"
+	"net/http"
+	"strconv"
+	"teamProject/api/models"
+)
 
 // CreateProduct godoc
 // @Router       /product [POST]
@@ -15,7 +20,26 @@ import "github.com/gin-gonic/gin"
 // @Failure      404  {object}  models.Response
 // @Failure      500  {object}  models.Response
 func (h Handler) CreateProduct(c *gin.Context) {
+	product := models.CreateProduct{}
 
+	if err := c.ShouldBindJSON(&product); err != nil {
+		handleResponse(c, "error is while reading body", http.StatusBadRequest, err.Error())
+		return
+	}
+
+	id, err := h.storage.Product().Create(product)
+	if err != nil {
+		handleResponse(c, "error is while creating product", http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	createdProduct, err := h.storage.Product().GetByID(id)
+	if err != nil {
+		handleResponse(c, "error is while getting by id", http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	handleResponse(c, "", http.StatusCreated, createdProduct)
 }
 
 // GetProduct godoc
@@ -31,7 +55,14 @@ func (h Handler) CreateProduct(c *gin.Context) {
 // @Failure      404  {object}  models.Response
 // @Failure      500  {object}  models.Response
 func (h Handler) GetProduct(c *gin.Context) {
+	uid := c.Param("id")
+	product, err := h.storage.Product().GetByID(uid)
+	if err != nil {
+		handleResponse(c, "error is while getting by id", http.StatusInternalServerError, err.Error())
+		return
+	}
 
+	handleResponse(c, "", http.StatusOK, product)
 }
 
 // GetProductList godoc
@@ -49,7 +80,38 @@ func (h Handler) GetProduct(c *gin.Context) {
 // @Failure      404  {object}  models.Response
 // @Failure      500  {object}  models.Response
 func (h Handler) GetProductList(c *gin.Context) {
+	var (
+		page, limit int
+		search      string
+		err         error
+	)
 
+	pageStr := c.DefaultQuery("page", "1")
+	page, err = strconv.Atoi(pageStr)
+	if err != nil {
+		handleResponse(c, "error is while converting page", http.StatusBadRequest, err.Error())
+		return
+	}
+
+	limitStr := c.DefaultQuery("limit", "10")
+	limit, err = strconv.Atoi(limitStr)
+	if err != nil {
+		handleResponse(c, "error is while converting limit", http.StatusBadRequest, err.Error())
+		return
+	}
+
+	search = c.Query("search")
+	products, err := h.storage.Product().GetList(models.GetListRequest{
+		Page:   page,
+		Limit:  limit,
+		Search: search,
+	})
+	if err != nil {
+		handleResponse(c, "error is while getting list", http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	handleResponse(c, "", http.StatusOK, products)
 }
 
 // UpdateProduct godoc
@@ -60,12 +122,34 @@ func (h Handler) GetProductList(c *gin.Context) {
 // @Accept       json
 // @Produce      json
 // @Param 		 id path string true "product_id"
+// @Param 		 product body models.UpdateProduct false "product"
 // @Success      200  {object}  models.Product
 // @Failure      400  {object}  models.Response
 // @Failure      404  {object}  models.Response
 // @Failure      500  {object}  models.Response
 func (h Handler) UpdateProduct(c *gin.Context) {
+	uid := c.Param("id")
+	product := models.UpdateProduct{}
 
+	if err := c.ShouldBindJSON(&product); err != nil {
+		handleResponse(c, "error is while reading body", http.StatusBadRequest, err.Error())
+		return
+	}
+
+	product.ID = uid
+	id, err := h.storage.Product().Update(product)
+	if err != nil {
+		handleResponse(c, "error is while updating", http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	updatedProduct, err := h.storage.Product().GetByID(id)
+	if err != nil {
+		handleResponse(c, "error is while getting by id", http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	handleResponse(c, "", http.StatusOK, updatedProduct)
 }
 
 // DeleteProduct godoc
@@ -81,5 +165,11 @@ func (h Handler) UpdateProduct(c *gin.Context) {
 // @Failure      404  {object}  models.Response
 // @Failure      500  {object}  models.Response
 func (h Handler) DeleteProduct(c *gin.Context) {
+	uid := c.Param("id")
+	if err := h.storage.Product().Delete(uid); err != nil {
+		handleResponse(c, "error is while deleting", http.StatusInternalServerError, err.Error())
+		return
+	}
 
+	handleResponse(c, "", http.StatusOK, "product deleted!")
 }
