# api/models/product.go
@@ -1,14 +1,16 @@
 package models
 
+import "time"
+
 type Product struct {
-	ID         string `json:"id"`
-	Name       string `json:"name"`
-	Price      int    `json:"price"`
-	Barcode    int    `json:"barcode"`
-	CategoryID string `json:"category_id"`
-	CreatedAt  string `json:"created_at"`
-	UpdatedAt  string `json:"updated_at"`
-	DeletedAt  string `json:"-"`
+	ID         string    `json:"id"`
+	Name       string    `json:"name"`
+	Price      int       `json:"price"`
+	Barcode    int       `json:"barcode"`
+	CategoryID string    `json:"category_id"`
+	CreatedAt  time.Time `json:"created_at"`
+	UpdatedAt  time.Time `json:"updated_at"`
+	DeletedAt  time.Time `json:"-"`
 }
 
 type CreateProduct struct {
@@ -19,12 +21,12 @@ type CreateProduct struct {
 }
 
 type UpdateProduct struct {
-	ID         string `json:"-"`
-	Name       string `json:"name"`
-	Price      int    `json:"price"`
-	Barcode    int    `json:"barcode"`
-	CategoryID string `json:"category_id"`
-	UpdatedAt  string `json:"-"`
+	ID         string    `json:"-"`
+	Name       string    `json:"name"`
+	Price      int       `json:"price"`
+	Barcode    int       `json:"barcode"`
+	CategoryID string    `json:"category_id"`
+	UpdatedAt  time.Time `json:"-"`
 }
 
 type ProductResponse struct {
